apps/talos_cluster/wanderer/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wanderer
  namespace: wanderer
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - wanderer.mtrnord.blog
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wanderer-web
          port: 3000
      timeouts:
        request: 240s
        backendRequest: 0s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wanderer-db
  namespace: wanderer
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - api.wanderer.mtrnord.blog
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wanderer-db
          port: 8090
      timeouts:
        request: 120s
        backendRequest: 0s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: wanderer-compression
  namespace: wanderer
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: wanderer
  compression:
    - type: Gzip
    - type: Brotli
